next
optionally disable the checksum step by giving -checksum none
optionally show progress
1.7.0
requires a C++17 capable compiler.
new fast non-cryptographic hash xxh
controllable buffer size for calculating checksum
1.6.0
supports sha512
1.4.0alpha
now requires a c++11 capable compiler
1.3.5
Capitalization of bytes is now more correct in the console output.
It is unlikely this affects usage, unless the user actually parses the
output of the command rather than the results file.

sha1 was always selected over md5, even if the user specified md5
on the commandline. This is now fixed.
1.3.1
now builds with gcc 4.7
1.3.0
Spelling of OCCURRENCE is now correct. This might affect user scripts
parsing the output file (results.txt). 
1.2.3+
fixed bug with failure to read files given directly on command line
added debug support in configure script

