@@ -91,6 +91,14 @@ for files, smaller or bigger can improve performance
 dependent on filesystem and checksum algorithm.
 The default is 1 MiB, the maximum allowed is 128MiB (inclusive).
 .TP
+.BR \-firstbytessize " " \fIN\fR
+Size in bytes when scanning the first bytes of each file, prior to full
+checksumming. Setting this to 0 means skipping the step entirely.
+.TP
+.BR \-lastbytessize " " \fIN\fR
+Size in bytes when scanning the last bytes of each file, prior to full
+checksumming. Setting this to 0 means skipping the step entirely.
+.TP
 .BR \-deterministic " " \fItrue\fR|\fIfalse\fR
 If set (the default), sort files of equal rank in an unspecified but
 deterministic order. This makes the behaviour independent of in which
