@@ -1,6 +1,7 @@
 next
 optionally disable the checksum step by giving -checksum none
 optionally show progress
+optionally adjust the size of first/last bytes, or disable it completely.
 1.7.0
 requires a C++17 capable compiler.
 new fast non-cryptographic hash xxh
